ingresses/1-proxy/base/external-graphql/api-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-graphql
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.demo.demo.traefiklabs.tech`) && PathPrefix(`/countries`)
      services:
        - name: countries-graphql-api-external-service
          port: 443
